Fixes padding problem in search bar on Firefox.

--- a/css/refine.css
+++ b/css/refine.css
@@ -130,7 +130,6 @@ html{}
     display: none;
 }
 
-
 .control {
     margin: 1em 0 1em 0;
 }
@@ -182,12 +181,7 @@ html{}
 .elev, .forest .container {padding-left:1em;}
 .range {
     width: 6em;
-    
-  /*  height:0.1em,;
-    margin: 0.3em;
-    padding-top: 0.1em;
-    padding-bottom: 0.1em;
-    outline: none;*/
+   
 }
 
 .slider .slider-horizontal {
@@ -237,7 +231,7 @@ html{}
 .tt-hint {
   width: 100%;
   height: 2em;
-  padding: 0.8em 1.1em;
+  /*padding: 0.8em 1.1em;*/
   font-size: 1.2em;
   line-height: 2em;
   border: 2px solid #ccc;
@@ -282,9 +276,9 @@ html{}
 }
 
 .tt-suggestion {
-  padding: 3px 20px;
-  font-size: 1.2em;
-  line-height: 1.2em;
+  padding: 0.1em 1em;
+  font-size: 1.1em;
+  line-height: 1.1em;
 }
 .tt-dropdown-menu {
   
